[gd_scene load_steps=12 format=3 uid="uid://b6mwnyiip3nlr"]

[ext_resource type="Script" path="res://Scripts/Objects/ItemBox.gd" id="1_4os8p"]
[ext_resource type="Texture2D" uid="uid://c1xt564a4bkvc" path="res://Graphics/Objects/Item Box.png" id="1_x05hu"]
[ext_resource type="Texture2D" uid="uid://c751ye6i8qx3d" path="res://Graphics/Objects/Item Box Card.png" id="2_3i0i6"]
[ext_resource type="AudioStream" uid="uid://c2h7q6wo2wqgx" path="res://SFX/Item Pop.wav" id="4_53jph"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ed6rt"]
radius = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qxaor"]
atlas = ExtResource("2_3i0i6")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbiak"]
atlas = ExtResource("2_3i0i6")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rwrr7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxaor")
}],
"loop": true,
"name": &"10 Rings",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbiak")
}],
"loop": true,
"name": &"5 Rings",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jcj2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBubble:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteBubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteCard:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteBubble:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_axcso"]
resource_name = "collect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBubble:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteBubble:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.615572, 26.9087),
"update": 0,
"values": [Vector2(1, 1), Vector2(6, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteCard:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -48)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"destroy"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteBubble:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1p2ha"]
_data = {
"RESET": SubResource("Animation_jcj2b"),
"collect": SubResource("Animation_axcso")
}

[node name="ItemBox" type="Node2D"]
script = ExtResource("1_4os8p")

[node name="SpriteBubble" type="Sprite2D" parent="."]
texture = ExtResource("1_x05hu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ed6rt")
debug_color = Color(0, 1, 0, 0.419608)

[node name="SpriteCard" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rwrr7")
animation = &"5 Rings"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1p2ha")
}

[node name="SfxItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_53jph")
volume_db = -10.732

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
